--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Benson</string>
 
-    <string name="initialization">Initializing Benson...</string>
+    <string name="initialization">Initializing Benson…</string>
 
     <string name="error_recognition">Recognition error.</string>
 
